--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="about.html"></a>
 
   <!-- Challenge 3: Wrap the img tag below with link uses the target attribute -->
- <a href="https://s3.amazonaws.com"></a>
+ <a href="https://s3.amazonaws.com">>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion" target="_blank">Amazonaws</a>
   
 
